--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,16 +34,16 @@ jobs:
       - name: West Zephyr export
         run: west zephyr-export
       - name: West Build (M60)
-        run: west build -s zmk/app -b nice_nano -- -DSHIELD=m60 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+        run: west build -s zmk/app -b nrf52840_m2 -- -DSHIELD=m60 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
       - name: M60 DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano.dts.pre.tmp
+        run: cat -n build/zephyr/nrf52840_m2.dts.pre.tmp
       - name: M60 Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 m60_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 m60_nrf52840_m2.uf2
       - name: Archive (M60)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: m60_nice_nano.uf2
+          path: m60_nrf52840_m2.uf2
