--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Define build timestamp
         id: timestamp
-        run: echo "::set-output name=timestamp::$(date +'%Y%m%d-%T')"
+        run: echo "::set-output name=timestamp::$(date +'%Y%m%d-%H%M%S')"
       - name: Checkout
         uses: actions/checkout@v2
       - name: Cache west modules
