Disable sleep (latency bug)

--- a/config/m60.conf
+++ b/config/m60.conf
@@ -8,6 +8,6 @@ CONFIG_ZMK_LOG_LEVEL_DBG=n
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # Set Sleep
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 # 15 Minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
