--- a/config/m60.conf
+++ b/config/m60.conf
@@ -5,7 +5,7 @@ CONFIG_ZMK_LOG_LEVEL_DBG=n
 
 # Set Idle
 # 5 Minutes
-CONFIG_ZMK_IDLE_TIMEOUT=300000
+# CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # Set Sleep
 # CONFIG_ZMK_SLEEP=y
